feat(swagger)
Still buggin
